# AI-Job-Market-Dashboard

./: .gitignore  DATA_FOUNDATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  JMMI_QUICKSTART.md  PIPELINE_SUCCESS.md  PRE_PUSH_CHECKLIST.md  QUICK_PUSH.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  TESTING_RESULTS.md  TEST_DATA_FOUNDATION.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  astro.config.mjs  next.config.mjs  package-lock.json  package.json  push_to_github.sh  pyproject.toml  requirements.txt  setup.py  tailwind.config.mjs  tsconfig.json  vercel.json
.github/workflows/: daily_etl.yml
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
components/: GlobalSearch.tsx  Navbar.tsx  ThemeToggle.tsx
components/dashboard/: AlertsPanel.tsx  CompanyLeaderboard.tsx  DataQualityIndicator.tsx  ForecastChart.tsx  HiringVolumeChart.tsx  InsightsSummary.tsx  JMMIGauge.tsx  MapView.tsx  SkillsLeaderboard.tsx
config/: categories_mapping.yml  skills_master.csv
data/: alerts.json  companies.json  jmmi.json
etl/: __init__.py  aggregate_counts.py  clean_jobs.py  compute_jmmi.py  export_json.py  fetch_jobs.py  fetch_multi_source.py  fetch_usajobs.py  forecast_jobs.py  generate_alerts.py  nlp_clusters.py  nlp_skills.py  pipeline.py
lib/: data.ts  formatters.ts  types.ts  usePrefs.ts
sample_data/: sample_jobs_raw.json
scripts/: __init__.py  backfill_historical.py  run_full_pipeline.py
tests/: test_clean_jobs.py  test_forecast_jobs.py  test_skill_extraction.py
(+41 files in other folders)
